change the db to local

--- a/SMLApplication.Data/App.Config
+++ b/SMLApplication.Data/App.Config
@@ -6,7 +6,7 @@
   </configSections>
   <connectionStrings>
    
-  <add name="SMLDBEntities" connectionString="metadata=res://*/SMLDBModel.csdl|res://*/SMLDBModel.ssdl|res://*/SMLDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ASHEN123-PC;initial catalog=SMLDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <add name="SMLDBEntities" connectionString="metadata=res://*/SMLDBModel.csdl|res://*/SMLDBModel.ssdl|res://*/SMLDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=SMLDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
