--- a/SMLApplication.Web/Web.config
+++ b/SMLApplication.Web/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-SMLApplication.Web-20150729003448;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-SMLApplication.Web-20150729003448.mdf" providerName="System.Data.SqlClient" />
-    <add name="SMLDBEntities" connectionString="metadata=res://*/SMLDBModel.csdl|res://*/SMLDBModel.ssdl|res://*/SMLDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ASHEN123-PC;initial catalog=SMLDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SMLDBEntities" connectionString="metadata=res://*/SMLDBModel.csdl|res://*/SMLDBModel.ssdl|res://*/SMLDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=SMLDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 
   <appSettings>
